# rust-concurrent-prime-finder

./: Cargo.toml  README.md
src/: main.rs
